--- a/sky-take-out/pom.xml
+++ b/sky-take-out/pom.xml
@@ -10,25 +10,40 @@
     </parent>
     <groupId>com.sky</groupId>
     <artifactId>sky-take-out</artifactId>
+    <!-- 打包集成到父工程 -->
     <packaging>pom</packaging>
     <version>1.0-SNAPSHOT</version>
+    <!-- 子模块 -->
     <modules>
         <module>sky-common</module>
         <module>sky-pojo</module>
         <module>sky-server</module>
     </modules>
+    <!-- 依赖管理 -->
     <properties>
+        <!-- 用于在Spring项目中使用mybatis操作数据库 -->
         <mybatis.spring>2.2.0</mybatis.spring>
+        <!-- 通过注解简化代码，减少getter、setter等 -->
         <lombok>1.18.20</lombok>
+        <!-- JSON解析工具 -->
         <fastjson>1.2.76</fastjson>
+        <!-- 字符串工具类 -->
         <commons.lang>2.6</commons.lang>
+        <!-- 数据库连接池 -->
         <druid>1.2.1</druid>
+        <!-- 分页插件 -->
         <pagehelper>1.3.0</pagehelper>
+        <!-- 阿里云OSS对象存储服务SDK -->
         <aliyun.sdk.oss>3.10.2</aliyun.sdk.oss>
+        <!-- knife4j接口文档 -->
         <knife4j>3.0.2</knife4j>
+        <!-- 面向切面的编程（AOP）框架，用于在Java中实现横切关注点 -->
         <aspectj>1.9.4</aspectj>
+        <!-- JWT（JSON Web Token）库，用于生成和解析JWT -->
         <jjwt>0.9.1</jjwt>
+        <!-- jaxb-api，用于将Java对象映射到XML -->
         <jaxb-api>2.3.1</jaxb-api>
+        <!-- Apache POI是一个用于读写Microsoft Office格式文件的Java库，如Excel和Word -->
         <poi>3.16</poi>
     </properties>
     <dependencyManagement>
